# fake-installations

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
data/: 15_PA.csv.sample
