[project]
name = "fake-installations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.12.0",
    "ipykernel>=7.0.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
]

[tool.isort]
profile = "black"